Fixed layout issues on Learn Page with embeded videos

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ h1{
 
 h2 {
     padding-left: 1rem;
+    padding-bottom: 1rem;;
     font-size: 1.5rem;
     color: #3478f6;
 }
@@ -464,23 +465,24 @@ select:focus-within {
 }
 
 
+
 .video-content {
-    display: flex;
-    justify-content: center;
-    padding: 1rem;
+
     position: relative;
     padding-bottom: 56.25%; /* 16:9 aspect ratio */
     height: 0;
     overflow: hidden;
     max-width: 80%;
+    margin:auto;
   }
   
   .video-content iframe {
     position: absolute;
     top: 0;
     left: 0;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+
   }
 
 
